leptos_macro/tests/compiler_assumptions/01_universal_function_call_syntax_does_not_produce_error_type_but_uses_on_unimplemented.stderr
error[E0277]: custom: `bool` does not implement `Check`
  --> tests/compiler_assumptions/01_universal_function_call_syntax_does_not_produce_error_type_but_uses_on_unimplemented.rs:37:19
   |
37 |     let result = <_ as Check>::pass(val);
   |                   ^ the trait `Fn()` is not implemented for `bool`
   |
note: required for `bool` to implement `Check`
  --> tests/compiler_assumptions/01_universal_function_call_syntax_does_not_produce_error_type_but_uses_on_unimplemented.rs:21:23
   |
21 | impl<T: Fn() -> bool> Check for T {
   |         ------------  ^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here

error[E0308]: mismatched types
  --> tests/compiler_assumptions/01_universal_function_call_syntax_does_not_produce_error_type_but_uses_on_unimplemented.rs:40:18
   |
40 |     needs_string(result);
   |     ------------ ^^^^^^ expected `String`, found `bool`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/compiler_assumptions/01_universal_function_call_syntax_does_not_produce_error_type_but_uses_on_unimplemented.rs:27:4
   |
27 | fn needs_string(_: String) {}
   |    ^^^^^^^^^^^^ ---------
help: try using a conversion method
   |
40 |     needs_string(result.to_string());
   |                        ++++++++++++
